# stm32_bsp

./: .gitignore  .mxproject  CMakeLists.txt  QA.md  README.md  STM32F103C8Tx_FLASH.ld  env.sh  uart_led.ioc
Core/Inc/: stm32f1xx_it.h
Core/Src/: main.c  stm32f1xx_hal_msp.c
applications/data_collect/: CMakeLists.txt  Kconfig  VERSION  prj.conf
applications/data_collect/boards/: apollo_f767ig.conf  apollo_f767ig.overlay  apollo_h743ii.conf  apollo_h743ii.overlay  daq_f407vet6.conf  daq_f407vet6.overlay
applications/data_collect/include/: init.h
applications/data_collect/snippets/http_server/: http_server.conf
applications/data_collect/snippets/imgmgr/: imgmgr.conf
applications/data_collect/snippets/shell_en/: shell_en.conf
applications/data_collect/src/: fs.c  fw_upgrade.c  http_server.c  main.c  time.c
applications/data_collect/src/ftp/: ftp.h  ftp_cmds.c  ftp_handler.c  ftpd.c
applications/data_collect/src/modbus/: adc.c  dio.c  function.c  history.c  init.c  rtu.c  tcp.c  udp.c
applications/data_collect/sysbuild/: mcuboot.conf
boards/apollo_f767ig/: CMakeLists.txt  Kconfig.apollo_f767ig  Kconfig.defconfig  apollo_f767ig.dts  apollo_f767ig.yaml  apollo_f767ig_defconfig  board.c  board.cmake  board.yml
boards/apollo_h743ii/: apollo_h743ii.dts  apollo_h743ii_defconfig
boards/daq_f407vet6/: Kconfig.daq_f407vet6  Kconfig.defconfig  board.cmake  board.yml  daq_f407vet6.dts  daq_f407vet6.yaml  daq_f407vet6_defconfig
boards/moni_f407vet6/: Kconfig.defconfig  Kconfig.moni_f407vet6  board.cmake  board.yml  moni_f407vet6.dts  moni_f407vet6.yaml  moni_f407vet6_defconfig
boards/moni_f407vet6/support/: openocd.cfg
boards/stm32f103_bluepill/: board.cmake  stm32f103_bluepill_defconfig
cmake/stm32cubemx/: CMakeLists.txt
f767_led/: .mxproject  CMakeLists.txt  STM32F767IGTx_FLASH.ld  f767_led.ioc
f767_led/Core/Inc/: main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
f767_led/Core/Src/: dma.c  gpio.c  iwdg.c  main.c  stm32f7xx_hal_msp.c  stm32f7xx_hal_timebase_tim.c  stm32f7xx_it.c
f767_led/cmake/: gcc-arm-none-eabi.cmake
f767_led/cmake/stm32cubemx/: CMakeLists.txt
tools/: flash_h743.sh  fw_update.py  http_up.sh  udp_multi_getinfo.py  udp_multi_setinfo.py
uart_led/: .mxproject  CMakeLists.txt  README.md  uart_led.ioc
uart_led/Core/Inc/: main.h  stm32f1xx_it.h
uart_led/Core/Src/: main.c  stm32f1xx_it.c
uart_led/cmake/stm32cubemx/: CMakeLists.txt
